Fixed alignment

--- a/com_simpleshow/media/com_simpleshow/css/site.css
+++ b/com_simpleshow/media/com_simpleshow/css/site.css
@@ -30,6 +30,7 @@
 		overflow: hidden;
 		padding: 6px 10px;
 		position: absolute;
+		text-align: left;
 		width: 435px;
 	}
 	.mod_simpleshow .main .title {
